--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@auth0/auth0-react": "^2.2.4",
     "@chakra-ui/icons": "^2.1.1",
     "@clerk/clerk-react": "^5.2.2",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-pdf-viewer/core": "^3.12.0",
